--- a/static/styles/tui-doc.css
+++ b/static/styles/tui-doc.css
@@ -272,12 +272,15 @@ footer {
     text-align: center;
 }
 
-/* README */
+/* README*/
 .readme {
     font-size: 14px;
 }
+.readme p,
 .readme ul,
-.readme ol,
+.readme ol {
+    padding: 3px 0 3px 5px;
+}
 .readme li {
     list-style: initial;
 }
@@ -287,16 +290,11 @@ footer {
 .readme h1 {
     font-size:24px;
     font-weight:normal;
-    margin: 5px 20px 10px;
     padding: 10px 0 5px 0;
     border-bottom: 1px solid #428bca;
 }
-.readme p,
-.readme ol {
-    padding: 10px 30px 20px 30px;
-}
 .readme pre {
-    margin: 10px 30px 20px 30px;
+    margin: 15px 3px;
 }
 .readme li p {
     padding: 10px 0;
@@ -306,19 +304,23 @@ footer {
     color:#c7254e;
 }
 .readme h2 {
-    margin: 5px 20px;
     padding-bottom: 3px;
     border-bottom: 1px solid #dedede;
-    font-size: 20px;
+    font-size: 22px;
 }
 .readme h3 {
-    font-size: 17px;
-    color: #666;
-    margin: 5px 32px;
+    font-size: 20px;
     padding-bottom: 3px;
 }
-.readme ul {
-    padding: 5px 30px 20px;
+
+.readme h4 {
+    font-size: 18px;
+}
+.readme h5 {
+    font-size: 16px;
+}
+.readme h6 {
+    font-size: 15px;
 }
 .readme table {
     margin: 5px 30px 20px;
@@ -344,6 +346,12 @@ footer {
 }
 .readme section .container-overview dt {float:left; }
 .readme section .container-overview dd {float:left; margin-left:10px; }
+.readme blockquote {
+    padding: inherit;
+    margin: inherit;
+    font-size: inherit;
+    color: #777;
+}
 
 /* Search box */
 .search-container {
