--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -2,23 +2,15 @@
 var templates = env.conf.templates;
 var examples = env.conf.opts.tutorials;
 var css = templates.css;
-var logo = '';
-var footerText = '';
+var logo = templates.logo;
+var footerText = templates.footerText;
 var logoUrl = 'img/toast-ui.png';
 var width, height;
+var name = templates.name || package.name || title;
+var tutorialsName = templates.tabNames.tutorials;
+var apiName = templates.tabNames.api;
 var style = '';
-var name = '';
 var version = '';
-var examplesName = '';
-var apiName = '';
-
-if (templates) {
-    logo = templates.logo;
-    footerText = templates.footerText;
-    name = templates.name || package.name || title;
-    examplesName = templates.tabNames.tutorials || 'Examples';
-    apiName = templates.tabNames.api || 'API'
-}
 
 if (logo) {
     logoUrl = logo.url || logoUrl;
@@ -82,7 +74,7 @@ if (package) {
                 <a href="#"><h4><?js= apiName ?></h4></a>
             </li>
             <li id="examples-tab">
-                <a href="#"><h4><?js= examplesName ?></h4></a>
+                <a href="#"><h4><?js= tutorialsName ?></h4></a>
             </li>
         </ol>
     <?js } ?>
@@ -105,9 +97,11 @@ if (package) {
 <?js if (!isTutorial) { ?>
     <script>
         var id = '<?js= docs[0].longname ?>_sub'.replace(/"/g, '_');
-        var element = document.getElementById(id); // do not use jquery selector
+        var selectedApi = document.getElementById(id); // do not use jquery selector
+        var $selectedApi = $(selectedApi);
 
-        $(element).removeClass('hidden');
+        $selectedApi.removeClass('hidden');
+        $selectedApi.parent().find('.glyphicon').removeClass('glyphicon-plus').addClass('glyphicon-minus');
         showLnbApi();
     </script>
 <?js } else { ?>
