--- a/tmpl/container.tmpl
+++ b/tmpl/container.tmpl
@@ -20,18 +20,22 @@
 <section>
 
 <header>
-    <?js if (!doc.longname || doc.kind !== 'module') { ?>
-        <h2><?js if (doc.ancestors && doc.ancestors.length) { ?>
+    <?js if (isGlobalPage) { ?>
+        <h2>Global</h2>
+    <?js } else if (!doc.longname || doc.kind !== 'module') { ?>
+        <h2><?js if (doc.attribs) { ?><span class="attribs"><?js= doc.attribs ?></span><?js }
+            if (doc.ancestors && doc.ancestors.length) { ?>
             <span class="ancestors"><?js= doc.ancestors.join('') ?></span><?js
-         } 
+         }
         ?><?js= doc.name ?><?js
          if (doc.variation) { ?>
-            <sup class="variation"><?js= doc.variation ?></sup>
-        <?js } ?></h2>
+            <sup class="variation"><?js= doc.variation ?></sup><?js }
+         if (doc.signature && !doc.hideconstructor) { ?><?js= doc.signature ?><?js } ?></h2>
         <?js if (doc.classdesc) { ?>
             <div class="class-description"><?js= doc.classdesc ?></div>
         <?js } ?>
     <?js } else if (doc.kind === 'module' && doc.modules) { ?>
+        <h2><?js= doc.name || '' ?></h2>
         <?js doc.modules.forEach(function(module) { ?>
             <?js if (module.classdesc) { ?>
                 <div class="class-description"><?js= module.classdesc ?></div>
@@ -41,30 +45,32 @@
 </header>
 
 <article>
-    <div class="container-overview">
-    <?js if (doc.kind === 'module' && doc.modules) { ?>
-        <?js if (doc.description) { ?>
-            <div class="description"><?js= doc.description ?></div>
-        <?js } ?>
+    <?js if (!isGlobalPage) { ?>
+        <div class="container-overview">
+        <?js if (doc.kind === 'module' && doc.modules) { ?>
+            <?js if (doc.description) { ?>
+                <div class="description"><?js= doc.description ?></div>
+            <?js } ?>
 
-        <?js doc.modules.forEach(function(module) { ?>
-            <?js= self.partial('method.tmpl', module) ?>
-        <?js }) ?>
-    <?js } else if (doc.kind === 'class') { ?>
-        <?js= self.partial('method.tmpl', doc) ?>
-    <?js } else { ?>
-        <?js if (doc.description) { ?>
-            <div class="description"><?js= doc.description ?></div>
-        <?js } ?>
+            <?js doc.modules.forEach(function(module) { ?>
+                <?js= self.partial('method.tmpl', module) ?>
+            <?js }) ?>
+        <?js } else if (doc.kind === 'class' || (doc.kind === 'namespace' && doc.signature)) { ?>
+            <?js= self.partial('method.tmpl', doc) ?>
+        <?js } else { ?>
+            <?js if (doc.description) { ?>
+                <div class="description"><?js= doc.description ?></div>
+            <?js } ?>
 
-        <?js= self.partial('details.tmpl', doc) ?>
+            <?js= self.partial('details.tmpl', doc) ?>
 
-        <?js if (doc.examples && doc.examples.length) { ?>
-            <h3>Example<?js= doc.examples.length > 1? 's':'' ?></h3>
-            <?js= self.partial('examples.tmpl', doc.examples) ?>
+            <?js if (doc.examples && doc.examples.length) { ?>
+                <h3>Example<?js= doc.examples.length > 1? 's':'' ?></h3>
+                <?js= self.partial('examples.tmpl', doc.examples) ?>
+            <?js } ?>
         <?js } ?>
+        </div>
     <?js } ?>
-    </div>
 
     <?js if (doc.augments && doc.augments.length) { ?>
         <h3 class="subsection-title">Extends</h3>
@@ -82,13 +88,26 @@
 
     <?js
         var classes = self.find({kind: 'class', memberof: doc.longname});
+        classes = classes.filter(function(classItem) {
+            return !classItem.hideconstructor; // Support "@hideconstructor" (tui-jsdoc-template)
+        });
+
         if (!isGlobalPage && classes && classes.length) {
     ?>
-        <h3 class="subsection-title">Classes</h3>
-        <?js= self.partial('subsection-default.tmpl', {list: classes}) ?>
+            <h3 class="subsection-title">Classes</h3>
+            <?js= self.partial('subsection-default.tmpl', {list: classes}) ?>
     <?js } ?>
 
-     <?js
+    <?js
+        var interfaces = self.find({kind: 'interface', memberof: doc.longname});
+        if (!isGlobalPage && interfaces && interfaces.length) {
+    ?>
+        <h3 class="subsection-title">Interfaces</h3>
+
+        <?js= self.partial('subsection-default.tmpl', {list: interfaces}) ?>
+    <?js } ?>
+
+    <?js
         var mixins = self.find({kind: 'mixin', memberof: doc.longname});
         if (!isGlobalPage && mixins && mixins.length) {
     ?>
