--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -2,6 +2,8 @@
 var templates = env.conf.templates;
 var examples = env.conf.opts.tutorials;
 var css = templates.css;
+var ignoreDefaultTheme = templates.ignoreDefaultTheme;
+var ignoreDefaultLayout = templates.ignoreDefaultLayout;
 var scripts = templates.scripts;
 var logo = templates.logo;
 var footerText = templates.footerText;
@@ -48,7 +50,14 @@ if (package) {
     <link type="text/css" rel="stylesheet" href="styles/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="styles/prettify-jsdoc.css">
     <link type="text/css" rel="stylesheet" href="styles/prettify-tomorrow.css">
-    <link type="text/css" rel="stylesheet" href="styles/tui-doc.css">
+
+    <?js if (!ignoreDefaultTheme) { ?>
+        <link type="text/css" rel="stylesheet" href="styles/tui-doc-theme.css">
+    <?js } ?>
+
+    <?js if (!ignoreDefaultLayout) { ?>
+        <link type="text/css" rel="stylesheet" href="styles/tui-doc-layout.css">
+    <?js } ?>
 
     <?js if (css) { ?>
         <?js css.forEach(function(style) { ?>
